glx/testdata/invalid/missing-required-fields/citations/citation-missing-source.glx
citations:
  citation-missing-source:
    locator: "Page 1"


